--- a/index2.html
+++ b/index2.html
@@ -532,7 +532,7 @@
 
     <div class="faq-item">
       <div class="faq-question">Como vou receber o acesso ao programa ‘Códigos da Sedução Secreta’?</div>
-      <div class="faq-answer">Logo após a compra, você receberá um e-mail com login e senha para acessar a plataforma exclusiva.</div>
+      <div class="faq-answer">Logo após a compra, você receberá um e-mail com login para acessar.</div>
     </div>
 
     <div class="faq-item">
@@ -542,11 +542,11 @@
 
     <div class="faq-item">
       <div class="faq-question">Por quanto tempo terei acesso?</div>
-      <div class="faq-answer">O acesso é vitalício! Você pode assistir quando quiser e quantas vezes quiser.</div>
+      <div class="faq-answer">O acesso é vitalício! Você pode ver quando quiser e quantas vezes quiser.</div>
     </div>
 
     <div class="faq-item">
-      <div class="faq-question">Por que está tão barato? 12x de R$16?</div>
+      <div class="faq-question">Por que está tão barato? 12x de R$02,04?</div>
       <div class="faq-answer">Queremos democratizar o acesso ao conhecimento. Esse preço especial é por tempo LIMITADO.</div>
     </div>
 
