--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <img src="./foto 11.png" alt="Foto 11" />
       <img src="./foto 12.png" alt="Foto 12" />
     </div>
-    <a href="#" class="btn">Quero Acessar Agora</a>
+    <a href="https://pay.kiwify.com.br/mlB7AUL" class="btn">Quero Acessar Agora</a>
   </header>
 
   <!-- 🔥 Seções -->
@@ -555,7 +555,7 @@
       <div class="faq-answer">Não garantimos! Essa é uma oferta especial e pode sair do ar a qualquer momento.</div>
     </div>
 
-    <button class="btn">ACESSE OS CÓDIGOS SEDUTORES AGORA</button>
+    <a href="https://pay.kiwify.com.br/mlB7AUL" class="btn">Quero Acessar Agora</a>
 
   </div>
 
