--- a/indexcarta.html
+++ b/indexcarta.html
@@ -84,8 +84,8 @@
     <p>Confie. O <strong>Sedução Secreta</strong> mudou minha vida – e pode mudar a sua também.</p>
 
     <p style="text-align: right;"><strong>Com carinho,<br>Raquel 💖</strong></p>
+    <button class="btn">ACESSE OS CÓDIGOS SEDUTORES AGORA</button>
 
-    <a href="#" class="btn">Quero conhecer o Sedução Secreta</a>
   </div>
 </body>
 </html>
