--- a/indexcarta.html
+++ b/indexcarta.html
@@ -84,7 +84,7 @@
     <p>Confie. O <strong>Sedução Secreta</strong> mudou minha vida – e pode mudar a sua também.</p>
 
     <p style="text-align: right;"><strong>Com carinho,<br>Raquel 💖</strong></p>
-    <button class="btn">ACESSE OS CÓDIGOS SEDUTORES AGORA</button>
+    <a href="https://pay.kiwify.com.br/mlB7AUL" class="btn">Quero Acessar Agora</a>
 
   </div>
 </body>
